@@ -1,9 +1,9 @@
-# docker run -it --rm --name run-my-kafka -p 2181:2181 -p 9092:9092 daggerok/kafka:v10
+# docker run -it --rm --name run-my-kafka -p 2181:2181 -p 9092:9092 daggerok/kafka:v24
 
-FROM openjdk:8u171-jdk-alpine3.8
+FROM openjdk:12-ea-12-jdk-alpine3.8
 LABEL MAINTAINER='Maksim Kostromin https://github.com/daggerok'
 ARG EMBEDDED_KAFKA_FAT_JAR_APP_URL_ARG='https://raw.githubusercontent.com/daggerok/embedded-kafka/mvn-repo/embedded-kafka-0.0.3-all.jar'
-ARG ZOOKEEPER_DIR_ARG=/home/appuser
+ARG ZOOKEEPER_DIR_ARG=/home/appuser/.zk
 ARG ZOOKEEPER_PORT_ARG='2181'
 ARG KAFKA_PORT_ARG='9092'
 ARG KAFKA_TOPICS_ARG='\
@@ -13,7 +13,6 @@ ARG HTTP_CONTEXT_ARG='/'
 ARG JAVA_OPTS_ARG='\
 -Djava.net.preferIPv4Stack=true \
 -XX:+UnlockExperimentalVMOptions \
--XX:+UseCGroupMemoryLimitForHeap \
 -XshowSettings:vm '
 ENV EMBEDDED_KAFKA_FAT_JAR_APP_URL="${EMBEDDED_KAFKA_FAT_JAR_APP_URL_ARG}" \
     JAVA_OPTS="${JAVA_OPTS} ${JAVA_OPTS_ARG}" \
@@ -27,14 +26,6 @@ RUN apk add --no-cache --update busybox-suid bash curl unzip sudo openssh-client
  && adduser -h /home/appuser -s /bin/bash -D -u 1025 appuser wheel \
  && echo 'appuser ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers \
  && sed -i 's/.*requiretty$/Defaults !requiretty/' /etc/sudoers \
- && wget --no-cookies \
-         --no-check-certificate \
-         --header 'Cookie: oraclelicense=accept-securebackup-cookie' \
-                  'http://download.oracle.com/otn-pub/java/jce/8/jce_policy-8.zip' \
-         -O /tmp/jce_policy-8.zip \
- && unzip -o /tmp/jce_policy-8.zip -d /tmp \
- && mv -f ${JAVA_HOME}/lib/security ${JAVA_HOME}/lib/backup-security || echo 'nothing to backup' \
- && mv -f /tmp/UnlimitedJCEPolicyJDK8 ${JAVA_HOME}/lib/security || echo 'nothing to move...' \
  && wget -O /home/appuser/kafka.jar ${EMBEDDED_KAFKA_FAT_JAR_APP_URL} \
  && chown -R appuser:wheel /home/appuser/kafka.jar \
  && apk del busybox-suid unzip openssh-client shadow wget \
@@ -43,28 +34,28 @@ USER appuser
 WORKDIR /home/appuser
 VOLUME /home/appuser
 CMD /bin/bash
-ENTRYPOINT java -Djava.net.preferIPv4Stack=true \
-                -XX:+UnlockExperimentalVMOptions \
-                -XX:+UseCGroupMemoryLimitForHeap \
-                -XshowSettings:vm \
-                -jar ~/kafka.jar \
-                        --zookeeperPort="${ZOOKEEPER_PORT}" \
-                        --zookeeperDir="${ZOOKEEPER_DIR}" \
-                        --kafkaPort="${KAFKA_PORT}" \
-                        --kafkaTopics="${KAFKA_TOPICS}" \
-                        --httpPort="${HTTP_PORT}" \
-                        --httpContext="${HTTP_CONTEXT}"
+ENTRYPOINT java ${JAVA_OPTS} -jar ~/kafka.jar \
+                                      --zookeeperPort="${ZOOKEEPER_PORT}" \
+                                      --zookeeperDir="${ZOOKEEPER_DIR}" \
+                                      --kafkaPort="${KAFKA_PORT}" \
+                                      --kafkaTopics="${KAFKA_TOPICS}" \
+                                      --httpPort="${HTTP_PORT}" \
+                                      --httpContext="${HTTP_CONTEXT}"
 EXPOSE ${ZOOKEEPER_PORT} ${KAFKA_PORT} ${HTTP_PORT}
-HEALTHCHECK --timeout=2s \
-            --retries=33 \
-            CMD curl -f "http://127.0.0.1:${HTTP_PORT}${HTTP_CONTEXT}" || exit 1
+HEALTHCHECK \
+  --timeout=2s \
+  --retries=33 \
+  CMD test `lsof -i:${KAFKA_PORT}|awk '{print $2}'|wc -l` -ge 1 \
+   && test `lsof -i:${ZOOKEEPER_PORT}|awk '{print $2}'|wc -l` -ge 1 \
+   && test `lsof -i:${HTTP_PORT}|awk '{print $2}'|wc -l` -ge 1
+#            CMD curl -f "http://127.0.0.1:${HTTP_PORT}${HTTP_CONTEXT}" || exit 1
 
 ### you can use next docker-compose ###
 #
 # version: '2.1'
 # services:
 #   kafka:
-#     image: daggerok/kafka:v10
+#     image: daggerok/kafka:v24
 #     environment:
 #       ZOOKEEPER_PORT: 2181
 #       ZOOKEEPER_DIR: ./zk
